WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158156
REGRESSION (
r201405
): trailers.apple.com HUD is missing in fullscreen
https://bugs.webkit.org/show_bug.cgi?id=158156
Summary
REGRESSION (r201405): trailers.apple.com HUD is missing in fullscreen
Jon Lee
Reported
2016-05-27 10:29:08 PDT
Go to trailers.apple.com, play a trailer, take it fullscreen. The HUD is missing.
Attachments
Patch
(1.82 KB, patch)
2016-05-31 09:09 PDT
,
Jer Noble
darin
: review+
Details
Formatted Diff
Diff
Patch for landing (with test)
(13.31 KB, patch)
2016-05-31 11:43 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing (with test)
(13.39 KB, patch)
2016-05-31 14:09 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-05-27 10:33:14 PDT
<
rdar://problem/26519589
>
Jer Noble
Comment 2
2016-05-31 09:09:21 PDT
Created
attachment 280147
[details]
Patch
Darin Adler
Comment 3
2016-05-31 09:54:24 PDT
Comment on
attachment 280147
[details]
Patch No way to make a test case?
Jer Noble
Comment 4
2016-05-31 11:43:58 PDT
Created
attachment 280162
[details]
Patch for landing (with test)
Jer Noble
Comment 5
2016-05-31 14:09:49 PDT
Created
attachment 280183
[details]
Patch for landing (with test)
Jer Noble
Comment 6
2016-05-31 14:57:50 PDT
Committed
r201530
: <
http://trac.webkit.org/changeset/201530
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug