REGRESSION (r201405): trailers.apple.com HUD is missing in fullscreen https://bugs.webkit.org/show_bug.cgi?id=158156 <rdar://problem/26519589>

Reviewed by Darin Adler.

Source/WebKit2:

Only increase the frame of the webView (to account for top content inset) in one dimension.

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController enterFullScreen:]):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2Cocoa/FullscreenTopContentInset.html: Added.
* TestWebKitAPI/Tests/WebKit2Cocoa/FullscreenTopContentInset.mm: Added.
(-[FullscreenChangeMessageHandler userContentController:didReceiveScriptMessage:]):
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/176326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201530 268f45cc-cd09-0410-ab3c-d52691b4dbfc